--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,3 +1,15 @@
+.navigation-container {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.mobile-container {
+  margin: 1rem;
+}
+
 .mobile {
   height: 25rem;
   width: 15rem;
@@ -20,4 +32,10 @@
   width: 1.8rem;
   background: white;
   border-radius: 50%;
+}
+
+.page {
+  border: 1px solid black;
+  padding: 1rem;
+  width: 15rem;
 }
