--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,3 +1,9 @@
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .navigation-container {
   height: 100vh;
   width: 100vw;
