--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,9 +1,10 @@
 body {
   margin: 0 auto;
 
-  .App {
+  .Main {
     min-width: 100vw;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
@@ -14,3 +15,27 @@ body {
   padding: 1rem;
   width: 15rem;
 }
+
+.link {
+  text-decoration: none;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
+  color: rgb(34, 106, 214);
+  display: block;
+  width: 6.5rem;
+  margin: 1rem;
+  border: 1px solid rgb(199, 199, 199);
+  padding: 0.4rem;
+  border-radius: 20px;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+// .nostyling {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
