--- a/client/src/styles/navigation.scss
+++ b/client/src/styles/navigation.scss
@@ -8,6 +8,7 @@
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     font-size: 1.5rem;
     width: 100%;
+    box-shadow: 0px 1px 5px grey;
   }
   .mobile-all {
     display: flex;
@@ -26,11 +27,13 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
+        box-shadow: 4px 4px rgb(34, 34, 34), 6px 8px 7px rgb(34, 34, 34);
 
         .image {
           height: 75%;
           width: 85%;
           border-radius: 10px;
+          box-shadow: 1px 1px 3px rgb(34, 34, 34), -1px -1px 3px rgb(34, 34, 34);
         }
 
         .home-button {
