--- a/client/src/styles/navigation.scss
+++ b/client/src/styles/navigation.scss
@@ -17,32 +17,44 @@
     flex-flow: row wrap;
     justify-content: center;
 
-    .mobile-container {
-      margin: 1rem;
+    .card {
+      text-align: center;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-      .mobile {
-        height: 25rem;
-        width: 15rem;
-        background: darkslategray;
-        border-radius: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        box-shadow: 4px 4px rgb(34, 34, 34), 6px 8px 7px rgb(34, 34, 34);
+      h1 {
+        font-size: 1.5rem;
+        font-weight: 400;
+      }
 
-        .image {
-          height: 75%;
-          width: 85%;
-          border-radius: 10px;
-          box-shadow: 1px 1px 3px rgb(34, 34, 34), -1px -1px 3px rgb(34, 34, 34);
-        }
+      .mobile-container {
+        margin: 1rem;
 
-        .home-button {
-          height: 1.8rem;
-          width: 1.8rem;
-          background: white;
-          border-radius: 50%;
+        .mobile {
+          height: 25rem;
+          width: 15rem;
+          background: darkslategray;
+          border-radius: 20px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-around;
+          box-shadow: 4px 4px rgb(34, 34, 34), 6px 8px 7px rgb(34, 34, 34);
+
+          .image {
+            height: 75%;
+            width: 85%;
+            border-radius: 10px;
+            box-shadow: 1px 1px 3px rgb(34, 34, 34),
+              -1px -1px 3px rgb(34, 34, 34);
+          }
+
+          .home-button {
+            height: 1.8rem;
+            width: 1.8rem;
+            background: white;
+            border-radius: 50%;
+          }
         }
       }
     }
