--- a/client/src/styles/navigation.scss
+++ b/client/src/styles/navigation.scss
@@ -39,13 +39,11 @@
           flex-direction: column;
           align-items: center;
           justify-content: space-around;
-          box-shadow: 4px 4px rgb(34, 34, 34), 6px 8px 7px rgb(34, 34, 34);
+          box-shadow: 7px 5px rgb(44, 44, 44);
 
           &:hover {
-            height: 25.7rem;
-            width: 15.7rem;
-            box-shadow: 4px 4px rgb(34, 34, 34), 6px 8px 7px rgb(34, 34, 34),
-              15px 15px 5px palegoldenrod;
+            transform: scale(1.03, 1.03);
+            box-shadow: 7px 5px rgb(44, 44, 44), 10px 8px 8px rgb(73, 73, 73);
           }
 
           .image {
