--- a/client/src/styles/materialuibasic.scss
+++ b/client/src/styles/materialuibasic.scss
@@ -1,9 +1,9 @@
-.material-ui-basic {
+.materialui-basic-container {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-align: center;
 
-  .container {
+  .login-box {
     width: 18rem;
     height: 25rem;
     border: 1px solid black;
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
 
-    h2 {
+    .welcome-back {
       margin: 0;
       background: #3f51b5;
       padding: 1.2rem;
@@ -19,17 +19,13 @@
       font-size: 1.6rem;
     }
 
-    h4 {
+    .login-message {
       font-size: 1.1rem;
       font-weight: 300;
       margin: 1rem;
-
-      span {
-        font-weight: 500;
-      }
     }
 
-    .form {
+    .login-form {
       height: 100%;
       display: flex;
       flex-direction: column;
