--- a/client/src/styles/navigation.scss
+++ b/client/src/styles/navigation.scss
@@ -1,10 +1,10 @@
 .navigation-container {
   min-width: 100vw;
+  background: whitesmoke;
 
   .intro {
     background: darkslategray;
     padding: 1.5rem;
-    margin-bottom: 1rem;
     color: white;
     text-align: center;
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -16,6 +16,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    padding: 3rem 0;
 
     .card {
       text-align: center;
@@ -23,27 +24,50 @@
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
       h1 {
-        font-size: 1.5rem;
-        font-weight: 400;
+        font-size: 1.8rem;
+        font-weight: 500;
       }
 
       .mobile-container {
-        margin: 1rem;
+        margin: 1.2rem;
 
         .mobile {
           height: 26rem;
           width: 16rem;
-          background: darkslategray;
+          background: black;
           border-radius: 20px;
           display: flex;
           flex-direction: column;
           align-items: center;
           justify-content: space-around;
-          box-shadow: 7px 5px rgb(44, 44, 44);
+          // border: 1px solid rgba(0, 0, 0, 0.5);
+          // background: rgba(0, 0, 0, 0.25);
+          box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.9),
+            inset 0 1px rgba(255, 255, 255, 0.3),
+            inset 0 10px rgba(255, 255, 255, 0.2),
+            inset 0 10px 20px rgba(255, 255, 255, 0.25),
+            inset 0 -15px 30px rgba(0, 0, 0, 0.3);
+          -o-box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.9),
+            inset 0 1px rgba(255, 255, 255, 0.3),
+            inset 0 10px rgba(255, 255, 255, 0.2),
+            inset 0 10px 20px rgba(255, 255, 255, 0.25),
+            inset 0 -15px 30px rgba(0, 0, 0, 0.3);
+          -webkit-box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.9),
+            inset 0 1px rgba(255, 255, 255, 0.3),
+            inset 0 10px rgba(255, 255, 255, 0.2),
+            inset 0 10px 20px rgba(255, 255, 255, 0.25),
+            inset 0 -15px 30px rgba(0, 0, 0, 0.3);
+          -moz-box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.9),
+            inset 0 1px rgba(255, 255, 255, 0.3),
+            inset 0 10px rgba(255, 255, 255, 0.2),
+            inset 0 10px 20px rgba(255, 255, 255, 0.25),
+            inset 0 -15px 30px rgba(0, 0, 0, 0.3);
 
           &:hover {
-            transform: scale(1.03, 1.03);
-            box-shadow: 7px 5px rgb(44, 44, 44), 10px 8px 8px rgb(73, 73, 73);
+            // transform: scale(1.03, 1.03);
+            // box-shadow: 7px 5px rgb(44, 44, 44), 10px 8px 8px rgb(73, 73, 73);
+            animation: phone 900ms infinite;
+            transition-timing-function: ease-in-out;
           }
 
           .image {
@@ -79,5 +103,55 @@
         text-decoration: underline;
       }
     }
+  }
+}
+
+//0-20%: 0deg-.25deg,
+
+@keyframes phone {
+  0% {
+    transform: rotate(0deg);
+  }
+  5% {
+    transform: rotate(1deg);
+  }
+  10% {
+    transform: rotate(2deg);
+  }
+  15% {
+    transform: rotate(1deg);
+  }
+  20% {
+    transform: rotate(0deg);
+  }
+  // 30% {
+  //   transform: rotate(-0.5deg);
+  // }
+  // 40% {
+  //   transform: rotate(-0.5deg);
+  // }
+  // 50% {
+  //   transform: rotate(-0.5deg);
+  // }
+  // 60% {
+  //   transform: rotate(-0.5deg);
+  // }
+  // 70% {
+  //   transform: rotate(-0.5deg);
+  // }
+  80% {
+    transform: rotate(0deg);
+  }
+  85% {
+    transform: rotate(1deg);
+  }
+  90% {
+    transform: rotate(2deg);
+  }
+  95% {
+    transform: rotate(1deg);
+  }
+  100% {
+    transform: rotate(0deg);
   }
 }
