--- a/client/src/styles/navigation.scss
+++ b/client/src/styles/navigation.scss
@@ -1,18 +1,22 @@
 .navigation-container {
   min-width: 100vw;
+  min-height: 100vh;
   background: whitesmoke;
 
-  .intro {
-    background: darkslategray;
-    padding: 1.5rem;
-    color: white;
-    text-align: center;
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-    font-size: 1.5rem;
-    width: 100%;
-    box-shadow: 0px 1px 5px grey;
+  .modal-button {
+    animation: modal 3s ease-in-out 1000ms;
+    position: absolute;
+    top: 3%;
+    right: 2%;
   }
+
+  .mobile-all-active {
+    margin-bottom: -1rem;
+    background: red;
+  }
+
   .mobile-all {
+    margin: 1.5rem 0;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -28,46 +32,48 @@
         font-weight: 500;
       }
 
+      .active {
+        text-shadow: 0 0 4px orange;
+      }
+
       .mobile-container {
         margin: 1.2rem;
 
         .mobile {
           height: 26rem;
           width: 16rem;
-          background: black;
           border-radius: 20px;
+          border-bottom: 2px solid black;
           display: flex;
           flex-direction: column;
           align-items: center;
           justify-content: space-around;
-          // border: 1px solid rgba(0, 0, 0, 0.5);
-          // background: rgba(0, 0, 0, 0.25);
-          box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.9),
+          background: black;
+          box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.7),
             inset 0 1px rgba(255, 255, 255, 0.3),
             inset 0 10px rgba(255, 255, 255, 0.2),
             inset 0 10px 20px rgba(255, 255, 255, 0.25),
             inset 0 -15px 30px rgba(0, 0, 0, 0.3);
-          -o-box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.9),
+          -o-box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.7),
             inset 0 1px rgba(255, 255, 255, 0.3),
             inset 0 10px rgba(255, 255, 255, 0.2),
             inset 0 10px 20px rgba(255, 255, 255, 0.25),
             inset 0 -15px 30px rgba(0, 0, 0, 0.3);
-          -webkit-box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.9),
+          -webkit-box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.7),
             inset 0 1px rgba(255, 255, 255, 0.3),
             inset 0 10px rgba(255, 255, 255, 0.2),
             inset 0 10px 20px rgba(255, 255, 255, 0.25),
             inset 0 -15px 30px rgba(0, 0, 0, 0.3);
-          -moz-box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.9),
+          -moz-box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.7),
             inset 0 1px rgba(255, 255, 255, 0.3),
             inset 0 10px rgba(255, 255, 255, 0.2),
             inset 0 10px 20px rgba(255, 255, 255, 0.25),
             inset 0 -15px 30px rgba(0, 0, 0, 0.3);
 
           &:hover {
-            // transform: scale(1.03, 1.03);
-            // box-shadow: 7px 5px rgb(44, 44, 44), 10px 8px 8px rgb(73, 73, 73);
             animation: phone 900ms infinite;
             transition-timing-function: ease-in-out;
+            border-bottom: 1px solid rgba(255, 208, 0, 0.486);
           }
 
           .image {
@@ -82,6 +88,7 @@
             height: 1.8rem;
             width: 1.8rem;
             background: white;
+            opacity: 0.9;
             border-radius: 50%;
           }
         }
@@ -90,7 +97,7 @@
   }
 
   footer {
-    margin: 4rem 0 2rem 0;
+    margin: 2rem 0;
     text-align: center;
     font-size: 1rem;
 
@@ -106,7 +113,38 @@
   }
 }
 
-//0-20%: 0deg-.25deg,
+@keyframes modal {
+  0% {
+    transform: scale(1, 1);
+    background: #e0e1e2;
+    color: black;
+    border: 0.1px solid grey;
+  }
+  25% {
+    transform: scale(3, 3);
+    background: orange;
+    color: black;
+    border: 0.5px solid grey;
+  }
+  50% {
+    transform: scale(1, 1);
+    background: #e0e1e2;
+    color: black;
+    border: 0.1px solid grey;
+  }
+  75% {
+    transform: scale(3, 3);
+    background: orange;
+    border: 0.5px solid grey;
+    color: black;
+  }
+  100% {
+    transform: scale(1, 1);
+    background: #e0e1e2;
+    color: black;
+    border: 0.1px solid grey;
+  }
+}
 
 @keyframes phone {
   0% {
@@ -124,21 +162,6 @@
   20% {
     transform: rotate(0deg);
   }
-  // 30% {
-  //   transform: rotate(-0.5deg);
-  // }
-  // 40% {
-  //   transform: rotate(-0.5deg);
-  // }
-  // 50% {
-  //   transform: rotate(-0.5deg);
-  // }
-  // 60% {
-  //   transform: rotate(-0.5deg);
-  // }
-  // 70% {
-  //   transform: rotate(-0.5deg);
-  // }
   80% {
     transform: rotate(0deg);
   }
