--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -22,14 +22,16 @@ body {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 0.9rem;
-  color: rgb(34, 106, 214);
+  color: white;
+  background: rgb(0, 116, 224);
   display: block;
   margin: 1rem;
   border: 1px solid rgb(199, 199, 199);
   padding: 0.4rem 1rem;
-  border-radius: 20px;
+  border-radius: 8px;
 
   &:hover {
-    text-decoration: underline;
+    color: white;
+    background: darken(rgb(0, 116, 224), 10%);
   }
 }
