maintains image aspect ratios

--- a/client/src/styles/navigation.scss
+++ b/client/src/styles/navigation.scss
@@ -78,7 +78,8 @@
 
           .image {
             height: 75%;
-            width: 85%;
+
+            object-fit: scale-down;
             border-radius: 10px;
             box-shadow: 1px 1px 3px rgb(34, 34, 34),
               -1px -1px 3px rgb(34, 34, 34);
