--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -15,6 +15,19 @@ body {
   border: 1px solid black;
   padding: 2rem;
   max-width: 18rem;
+  font-family: "Times New Roman", Times, serif;
+
+  h2 {
+    font-family: "Times New Roman", Times, serif;
+  }
+
+  h3 {
+    font-family: "Times New Roman", Times, serif;
+  }
+
+  button {
+    font-family: "Times New Roman", Times, serif;
+  }
 }
 
 .link {
