changes styling/component names

--- a/client/src/styles/codedata.scss
+++ b/client/src/styles/codedata.scss
@@ -12,6 +12,10 @@
     flex-direction: column;
     margin: 1rem;
 
+    .select {
+      background: white;
+    }
+
     .code-box {
       height: 30rem;
     }
