--- a/client/src/styles/customsass.scss
+++ b/client/src/styles/customsass.scss
@@ -1,5 +1,4 @@
-.basic-styling-container {
-  // font-family: Arial, Helvetica, sans-serif;
+.custom-sass-container {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-align: center;
@@ -10,6 +9,7 @@
     width: 18rem;
     display: flex;
     flex-direction: column;
+    background: white;
 
     .welcome-back {
       margin: 0;
