--- a/client/src/styles/materialui.scss
+++ b/client/src/styles/materialui.scss
@@ -1,4 +1,4 @@
-.materialui-basic-container {
+.materialui-container {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-align: center;
@@ -10,6 +10,7 @@
     padding: 0;
     display: flex;
     flex-direction: column;
+    background: white;
 
     .welcome-back {
       margin: 0;
